# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
.cargo/: config.toml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20250614073117_make_status_not_null_in_subscriptions.sql  20250627020547_add_salt_to_users.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
