[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
config = "0.15.11"
actix-web = { version = "4.11.0" }
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
    "macros",
    "uuid",
    "chrono",
] }
uuid = { version = "1.17.0", features = ["v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.1.3"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.6"
serde-aux = "4.7.0"
unicode-segmentation = "1"
claim = "0.5"
validator = "0.18"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rand = {version = "0.8", features=["std_rng"]}

[dev-dependencies]
once_cell = "1"
fake = "2.9"
quickcheck = "1.0.3"
quickcheck_macros = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
serde_json = "1"
linkify = "0.8"
claims = "0.7"